* 2012-09-10 - marcus.klein@open-xchange.com

 - Fix for bug 22949: Missed to start OSGi service trackers for DatabaseService.

* 2012-09-07 - thorben.betten@open-xchange.com

 - Fix for bug 22943: Limit max. size of parseable HTML content; configurable through 'com.openexchange.html.maxLength'

* 2012-09-07 - marcus.klein@open-xchange.com

 - Fix for bug 22937: Preventing NullPointerExceptions in SOAP administrator reseller service if optional restrictions are not sent.
 - Fix for bug 22933: Pushing the DatabaseService into AdminCache instances of administration autocontextid bundle.

* 2012-09-06 - marcus.klein@open-xchange.com

 - Fix for bug 22872: Publishing directly the object of a RMI Remote interface instead of its stub makes the objects not disappear anymore.

* 2012-09-05 - marcus.klein@open-xchange.com

 - Fix for bug 22915: No NPE if SOAP method is not found.

* 2012-09-05 - thorben.betten@open-xchange.com

 - Fix for bug 22897: Make generated session instance available, rather than only providing its identifier
 - Fix for bug 22918: Deal with possible absent ThreadState instance
 - Fix for bug 22921: Added null guard to prevent NPE
 - Fix for bug 22920: Added null guard to prevent NPE
 - Fix for bug 22891: Added null guard
 - Fix for bug 22890: Added null guard
 - Fix for bug 22883: Added missing reseller interfaces
 - Fix for bug 22928: Fixed activator of bundle 'com.openexchange.user.copy'
 - Fix for bug 22870: Checking for possibly empty mail identifier on action=get_structure request
 - Fix for bug 22927: Fixed CleanUpActivator of bundle 'com.openexchange.subscribe'
 - Fix for bug 22926: Fixed activator of bundle 'com.openexchange.mobile.configuration.json'
 - Fix for bug 22929: Prefer user name when generating NoSuchUserException's message

* 2012-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 22886: Read and write support for ISO-2022-CN charset
 - Fix for bug 22884: Set appropriate content type